--- a/index.html
+++ b/index.html
@@ -23,6 +23,16 @@
         ::-webkit-scrollbar-track { background: #f1f1f1; }
         ::-webkit-scrollbar-thumb { background: #cbd5e1; border-radius: 4px; }
         ::-webkit-scrollbar-thumb:hover { background: #94a3b8; }
+        
+        /* 阶梯引物动画与定位 */
+        .primer-tail-hump {
+            position: absolute;
+            bottom: 100%;
+            left: 0;
+            white-space: nowrap;
+            font-weight: bold;
+            pointer-events: none;
+        }
     </style>
 <script type="importmap">
 {
